--- a/index.html
+++ b/index.html
@@ -4,40 +4,71 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jan Rubio | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
+    * {
       margin: 0;
       padding: 0;
-      background: #f9f9f9;
-      color: #333;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #0d1117;
+      color: #e6edf3;
+      line-height: 1.6;
     }
     header {
-      background-color: #0d1117;
-      color: white;
-      padding: 2rem;
+      background: linear-gradient(135deg, #1f6feb, #0d1117);
+      padding: 4rem 2rem;
       text-align: center;
+      animation: fadeInDown 1s ease-out;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      opacity: 0.8;
     }
     section {
-      padding: 2rem;
-      max-width: 900px;
+      padding: 3rem 2rem;
+      max-width: 960px;
       margin: auto;
+      animation: fadeInUp 1s ease-out;
     }
     h2 {
-      border-bottom: 2px solid #ccc;
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      border-bottom: 2px solid #30363d;
       padding-bottom: 0.5rem;
     }
     ul {
       padding-left: 1.5rem;
     }
+    li {
+      margin-bottom: 1rem;
+    }
     .project {
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
     }
     .contact a {
       display: inline-block;
       margin-right: 1rem;
-      color: #0366d6;
+      color: #58a6ff;
       text-decoration: none;
+    }
+    .contact a:hover {
+      text-decoration: underline;
+    }
+    @keyframes fadeInUp {
+      from { transform: translateY(40px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+    @keyframes fadeInDown {
+      from { transform: translateY(-40px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
   </style>
 </head>
@@ -99,8 +130,8 @@
 
   <section class="contact">
     <h2>💎 Contact</h2>
-    <p>Email: <a href="mailto:janrubiomontes@gmail.com">janrubiomontes@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/jan9122">github.com/jan9122</a></p>
+    <p><i class="ph ph-envelope"></i> Email: <a href="mailto:janrubiomontes@gmail.com">janrubiomontes@gmail.com</a></p>
+    <p><i class="ph ph-github-logo"></i> GitHub: <a href="https://github.com/jan9122">github.com/jan9122</a></p>
   </section>
 </body>
 </html>
