--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jan Rubio | Portfolio</title>
+  <title>Jan Rubio | Software Engineer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Inter', sans-serif;
       background: #0d1117;
@@ -24,14 +20,8 @@
       text-align: center;
       animation: fadeInDown 1s ease-out;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    header p {
-      font-size: 1.2rem;
-      opacity: 0.8;
-    }
+    header h1 { font-size: 2.8rem; margin-bottom: 0.5rem; }
+    header p { font-size: 1.3rem; opacity: 0.85; }
     section {
       padding: 3rem 2rem;
       max-width: 960px;
@@ -44,24 +34,16 @@
       border-bottom: 2px solid #30363d;
       padding-bottom: 0.5rem;
     }
-    ul {
-      padding-left: 1.5rem;
-    }
-    li {
-      margin-bottom: 1rem;
-    }
-    .project {
-      margin-bottom: 2rem;
-    }
+    ul { padding-left: 1.5rem; }
+    li { margin-bottom: 1rem; }
+    .project { margin-bottom: 2rem; }
     .contact a {
       display: inline-block;
       margin-right: 1rem;
       color: #58a6ff;
       text-decoration: none;
     }
-    .contact a:hover {
-      text-decoration: underline;
-    }
+    .contact a:hover { text-decoration: underline; }
     @keyframes fadeInUp {
       from { transform: translateY(40px); opacity: 0; }
       to { transform: translateY(0); opacity: 1; }
@@ -75,56 +57,60 @@
 <body>
   <header>
     <h1>Jan Rubio</h1>
-    <p>Software Engineer | Embedded Systems | Formula Student</p>
+    <p>Chief of Software | Embedded Systems | Formula Student</p>
   </header>
 
   <section>
     <h2>✨ About Me</h2>
-    <p>I am a Computer Science student at TecnoCampus Mataró (UPF), passionate about embedded systems, vehicle control software, and engineering innovation. I currently lead ECU development for a Formula Student team, and have experience in system maintenance and control operations.</p>
+    <p>I am a Software Engineer and Computer Engineering student passionate about embedded systems, vehicle control software, and innovation in motorsport. 
+    As Chief of Software at TecnoCampus MotorSports, I lead the development and integration of all vehicle software systems — including ECU, telemetry, display, and sensor networks — ensuring safety, performance, and reliability on track.</p>
   </section>
 
   <section>
     <h2>🚀 Projects</h2>
     <div class="project">
-      <h3>Formula Student ECU Development</h3>
-      <p>Responsible for software integration with sensors, safety logic, CAN bus communication and real-time control for electric race car performance and safety.</p>
+      <h3>Formula Student Software System</h3>
+      <p>Led the full software architecture for the electric Formula Student car, covering telemetry, ECU firmware, safety logic, sensor fusion, and CAN communication. Managed team workflows, validation, and software integration with hardware and vehicle subsystems.</p>
     </div>
     <div class="project">
-      <h3>Breakout Game (HTML/JS)</h3>
-      <p>Web-based game developed using JavaScript, HTML, CSS as part of a multimedia course. Includes game logic, sound effects, and UI screens.</p>
+      <h3>Telemetry Platform & Display UI</h3>
+      <p>Designed a real-time telemetry system and driver display. Implemented data transmission via CAN and UART, cloud storage, and visualization dashboards for engineering diagnostics.</p>
     </div>
     <div class="project">
-      <h3>Advanced Java Practices</h3>
-      <p>Object-Oriented Programming projects covering topics like encapsulation, inheritance, testing, and modular code design in Java.</p>
+      <h3>Java & Embedded Systems Coursework</h3>
+      <p>Developed multiple academic projects focused on object-oriented programming, embedded software optimization, and modular design in C, C++, and Java.</p>
     </div>
   </section>
 
   <section>
     <h2>📊 Experience</h2>
     <ul>
-      <li><strong>Software Engineer</strong> @ TecnoCampus MotorSports (Nov 2023 - Present)<br />
-        ECU development and software integration in electric vehicles.</li>
-      <li><strong>Control Room Operator</strong> @ MIM Maintenance (Jul 2024 - Present)<br />
+      <li><strong>Chief of Software</strong> @ TecnoCampus MotorSports (Nov 2023 - Present)<br />
+        Leading all software-related areas of the Formula Student project: ECU, telemetry, display systems, and sensors. Managing a multidisciplinary team to ensure integration, safety, and performance.</li>
+      <li><strong>Control Room Operator</strong> @ MIM Maintenance (Jul 2024 - Aug 2025)<br />
         Monitoring and control of critical systems and industrial processes.</li>
       <li><strong>Maintenance Technician</strong> @ Coty (Jun 2022 - Sep 2023)<br />
-        Maintenance of production line equipment in fragrance manufacturing.</li>
+        Preventive and corrective maintenance on production lines. Process optimization through diagnostics and automation proposals.</li>
     </ul>
   </section>
 
   <section>
     <h2>📚 Education</h2>
+    <p><strong>Computer Engineering</strong><br />
+    Universitat Oberta de Catalunya (UOC) | 2025 - Present</p>
     <p><strong>Computer Management and Information Systems Engineering</strong><br />
-    TecnoCampus Mataró (UPF) | 2023 - Present</p>
+    TecnoCampus Mataró (UPF) | 2023 - 2025</p>
   </section>
 
   <section>
     <h2>🔧 Skills</h2>
     <ul>
-      <li>Java, C++, Python, C</li>
-      <li>Embedded Systems & Real-Time Programming</li>
-      <li>Git & GitHub</li>
-      <li>Debugging, troubleshooting, problem-solving</li>
-      <li>Team communication and technical documentation</li>
+      <li>Embedded Systems & ECU Development (C/C++)</li>
+      <li>Telemetry, CAN Bus & Real-Time Communication</li>
+      <li>Python, Java, C++, C</li>
+      <li>Git & GitHub (branches, pull requests, workflows)</li>
+      <li>System integration, debugging & performance optimization</li>
+      <li>Technical leadership & documentation</li>
     </ul>
   </section>
 
@@ -132,6 +118,7 @@
     <h2>💎 Contact</h2>
     <p><i class="ph ph-envelope"></i> Email: <a href="mailto:janrubiomontes@gmail.com">janrubiomontes@gmail.com</a></p>
     <p><i class="ph ph-github-logo"></i> GitHub: <a href="https://github.com/jan9122">github.com/jan9122</a></p>
+    <p><i class="ph ph-link-simple"></i> Portfolio: <a href="https://jan9122.github.io">jan9122.github.io</a></p>
   </section>
 </body>
 </html>
