--- a/index.html
+++ b/index.html
@@ -3,122 +3,191 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jan Rubio | Software Engineer</title>
+  <title>Jan Rubio | Software Engineer Portfolio</title>
+  <meta name="description" content="Portfolio of Jan Rubio – Software Engineer and Computer Engineering student specializing in embedded systems and motorsport technology. Showcasing projects, experience, skills, and contact information.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <style>
+    /* Base Styles */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Inter', sans-serif;
-      background: #0d1117;
-      color: #e6edf3;
+      background: #0d1117;  /* dark background */
+      color: #e6edf3;       /* light text */
       line-height: 1.6;
+      overflow-x: hidden;   /* prevent horizontal scroll if any */
     }
+    /* Header / Hero */
     header {
-      background: linear-gradient(135deg, #1f6feb, #0d1117);
-      padding: 4rem 2rem;
+      background: linear-gradient(135deg, #1f6feb, #0d1117);  /* blue to black gradient */
+      padding: 4rem 2rem 3rem;
       text-align: center;
-      animation: fadeInDown 1s ease-out;
     }
-    header h1 { font-size: 2.8rem; margin-bottom: 0.5rem; }
-    header p { font-size: 1.3rem; opacity: 0.85; }
+    header h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+    header p {
+      font-size: 1.25rem;
+      opacity: 0.85;
+    }
+    /* Navigation Menu */
+    header nav {
+      margin-top: 1.5rem;
+    }
+    header nav a {
+      margin: 0 1rem;
+      font-weight: 600;
+      color: #e6edf3;
+      text-decoration: none;
+    }
+    header nav a:hover {
+      color: #58a6ff;
+      text-decoration: underline;
+    }
+    /* Sections */
     section {
       padding: 3rem 2rem;
       max-width: 960px;
       margin: auto;
-      animation: fadeInUp 1s ease-out;
     }
-    h2 {
+    section h2 {
       font-size: 1.8rem;
       margin-bottom: 1rem;
       border-bottom: 2px solid #30363d;
       padding-bottom: 0.5rem;
     }
-    ul { padding-left: 1.5rem; }
-    li { margin-bottom: 1rem; }
-    .project { margin-bottom: 2rem; }
+    /* Alternate background for some sections to improve contrast */
+    #projects, #education, #contact {
+      background: #161b22;
+    }
+    /* Projects – use card style for project entries */
+    .project {
+      background: #21262d;
+      padding: 1rem 1.5rem;
+      border: 1px solid #30363d;
+      border-radius: 6px;
+      margin-bottom: 1.5rem;
+    }
+    .project h3 {
+      font-size: 1.2rem;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
+    /* Experience – custom list style */
+    #experience ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    #experience li {
+      margin-bottom: 1.5rem;
+    }
+    #experience li::before {
+      content: "💼 ";  /* briefcase icon before each job */
+      margin-right: 0.5rem;
+    }
+    /* (Optional) Skills – custom list style, e.g., checkmark before each skill
+    #skills ul { list-style: none; padding-left: 0; }
+    #skills li::before {
+      content: "✔️ ";
+      margin-right: 0.5rem;
+    } */
+    /* Contact section links */
+    .contact p {
+      margin-bottom: 0.5rem;
+    }
+    .contact i {
+      margin-right: 0.5rem;
+      vertical-align: middle; /* align icon with text */
+    }
     .contact a {
-      display: inline-block;
-      margin-right: 1rem;
       color: #58a6ff;
       text-decoration: none;
     }
-    .contact a:hover { text-decoration: underline; }
-    @keyframes fadeInUp {
-      from { transform: translateY(40px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-    @keyframes fadeInDown {
-      from { transform: translateY(-40px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
+    .contact a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Jan Rubio</h1>
-    <p>Chief of Software | Embedded Systems | Formula Student</p>
+    <p>Chief of Software &bull; Embedded Systems &bull; Formula Student</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#experience">Experience</a>
+      <a href="#education">Education</a>
+      <a href="#skills">Skills</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <section>
+  <section id="about">
     <h2>✨ About Me</h2>
-    <p>I am a Software Engineer and Computer Engineering student passionate about embedded systems, vehicle control software, and innovation in motorsport. 
-    As Chief of Software at TecnoCampus MotorSports, I lead the development and integration of all vehicle software systems — including ECU, telemetry, display, and sensor networks — ensuring safety, performance, and reliability on track.</p>
+    <p>I'm a passionate software engineer and computer engineering student with a focus on embedded systems, vehicle control software, and innovation in motorsport. Currently serving as the Chief of Software at **TecnoCampus MotorSports**, I lead the development and integration of all vehicle software systems – including the ECU firmware, telemetry, driver display, and sensor networks – to ensure safety, performance, and reliability on track.</p>
   </section>
 
-  <section>
+  <section id="projects">
     <h2>🚀 Projects</h2>
     <div class="project">
-      <h3>Formula Student Software System</h3>
-      <p>Led the full software architecture for the electric Formula Student car, covering telemetry, ECU firmware, safety logic, sensor fusion, and CAN communication. Managed team workflows, validation, and software integration with hardware and vehicle subsystems.</p>
+      <h3>Formula Student Car Software Architecture</h3>
+      <p>Led the design and implementation of the full software architecture for an electric Formula Student race car. This encompassed developing the ECU firmware, telemetry systems, safety logic, sensor fusion algorithms, and CAN bus communication. Coordinated software validation and integration with hardware subsystems, ensuring the car met all safety and performance criteria on the track.</p>
     </div>
     <div class="project">
-      <h3>Telemetry Platform & Display UI</h3>
-      <p>Designed a real-time telemetry system and driver display. Implemented data transmission via CAN and UART, cloud storage, and visualization dashboards for engineering diagnostics.</p>
+      <h3>Real-Time Telemetry Platform & Dashboard</h3>
+      <p>Designed and built a real-time telemetry system coupled with a driver dashboard UI. Implemented data acquisition and transmission via CAN and UART protocols, with cloud storage and live visualization dashboards for engineering diagnostics. This platform enabled the race team to monitor vehicle parameters in real time and make data-driven decisions during testing.</p>
     </div>
     <div class="project">
-      <h3>Java & Embedded Systems Coursework</h3>
-      <p>Developed multiple academic projects focused on object-oriented programming, embedded software optimization, and modular design in C, C++, and Java.</p>
+      <h3>Academic Java & Embedded Systems Projects</h3>
+      <p>Developed multiple academic projects demonstrating object-oriented design and embedded programming. Notable examples include an Arduino-based IoT device and a Java application for managing sensor data, focusing on modular architecture and performance optimization in C, C++, and Java.</p>
     </div>
   </section>
 
-  <section>
+  <section id="experience">
     <h2>📊 Experience</h2>
     <ul>
-      <li><strong>Chief of Software</strong> @ TecnoCampus MotorSports (Nov 2023 - Present)<br />
-        Leading all software-related areas of the Formula Student project: ECU, telemetry, display systems, and sensors. Managing a multidisciplinary team to ensure integration, safety, and performance.</li>
-      <li><strong>Control Room Operator</strong> @ MIM Maintenance (Jul 2024 - Aug 2025)<br />
-        Monitoring and control of critical systems and industrial processes.</li>
-      <li><strong>Maintenance Technician</strong> @ Coty (Jun 2022 - Sep 2023)<br />
-        Preventive and corrective maintenance on production lines. Process optimization through diagnostics and automation proposals.</li>
+      <li>
+        <strong>Chief of Software</strong> @ TecnoCampus MotorSports &ndash; <em>Nov 2023 – Present</em><br/>
+        Leading a multidisciplinary software team for our Formula Student electric car project. Overseeing ECU firmware development, telemetry and data acquisition systems, driver displays, and sensor network integration. Ensuring all software components work together seamlessly and safely in a high-performance racing environment.
+      </li>
+      <li>
+        <strong>Control Room Operator</strong> @ MIM Maintenance &ndash; <em>Jul 2024 – Aug 2025</em><br/>
+        Monitored and controlled critical industrial systems and processes in real-time. Responded to system alerts and collaborated with engineering teams to maintain optimal operation and safety procedures.
+      </li>
+      <li>
+        <strong>Maintenance Technician</strong> @ Coty, Inc. &ndash; <em>Jun 2022 – Sep 2023</em><br/>
+        Performed preventive and corrective maintenance on production line machinery. Diagnosed issues and implemented automation improvements to reduce downtime, thereby increasing efficiency in the manufacturing process.
+      </li>
     </ul>
   </section>
 
-  <section>
+  <section id="education">
     <h2>📚 Education</h2>
-    <p><strong>Computer Engineering</strong><br />
-    Universitat Oberta de Catalunya (UOC) | 2025 - Present</p>
-    <p><strong>Computer Management and Information Systems Engineering</strong><br />
-    TecnoCampus Mataró (UPF) | 2023 - 2025</p>
+    <p><strong>B.S. in Computer Engineering</strong><br/>
+       Universitat Oberta de Catalunya (UOC) – <em>2025 – Present</em></p>
+    <p><strong>Engineering in Computer Management and Information Systems</strong><br/>
+       TecnoCampus Mataró (UPF) – <em>2023 – 2025</em></p>
   </section>
 
-  <section>
+  <section id="skills">
     <h2>🔧 Skills</h2>
     <ul>
-      <li>Embedded Systems & ECU Development (C/C++)</li>
-      <li>Telemetry, CAN Bus & Real-Time Communication</li>
-      <li>Python, Java, C++, C</li>
-      <li>Git & GitHub (branches, pull requests, workflows)</li>
-      <li>System integration, debugging & performance optimization</li>
-      <li>Technical leadership & documentation</li>
+      <li>Embedded Systems &amp; ECU Firmware Development (C/C++)</li>
+      <li>Telemetry Systems, CAN Bus &amp; Real-Time Communication</li>
+      <li>Programming in Python, Java, C++ and C</li>
+      <li>Version Control with Git/GitHub (Branches, PRs, CI/CD)</li>
+      <li>System Integration, Debugging &amp; Performance Tuning</li>
+      <li>Technical Leadership &amp; Documentation</li>
     </ul>
   </section>
 
-  <section class="contact">
+  <section id="contact" class="contact">
     <h2>💎 Contact</h2>
-    <p><i class="ph ph-envelope"></i> Email: <a href="mailto:janrubiomontes@gmail.com">janrubiomontes@gmail.com</a></p>
-    <p><i class="ph ph-github-logo"></i> GitHub: <a href="https://github.com/jan9122">github.com/jan9122</a></p>
-    <p><i class="ph ph-link-simple"></i> Portfolio: <a href="https://jan9122.github.io">jan9122.github.io</a></p>
+    <p><i class="ph ph-envelope"></i>Email: <a href="mailto:janrubiomontes@gmail.com">janrubiomontes@gmail.com</a></p>
+    <p><i class="ph ph-github-logo"></i>GitHub: <a href="https://github.com/jan9122" target="_blank">github.com/jan9122</a></p>
+    <p><i class="ph ph-link-simple"></i>Portfolio: <a href="https://jan9122.github.io" target="_blank">jan9122.github.io</a></p>
   </section>
 </body>
 </html>
