--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jan Rubio | Software Engineer Portfolio</title>
-  <meta name="description" content="Portfolio of Jan Rubio – Software Engineer and Computer Engineering student specializing in embedded systems and motorsport technology. Showcasing projects, experience, skills, and contact information.">
+  <meta name="description" content="Portfolio of Jan Rubio – Software Engineer student specializing in embedded systems and motorsport technology. Showcasing projects, experience, skills, and contact information.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
