--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <section id="about" data-aos="fade-up">
     <h2>✨ About Me</h2>
-    <p>I'm a passionate software engineer and computer engineering student focused on embedded systems, vehicle control software, and innovation in motorsport. As Chief of Software at TecnoCampus MotorSports, I lead the development and integration of ECU firmware, telemetry, driver display, and sensor networks, ensuring safety and performance on track.</p>
+    <p>I'm a passionate software engineer student focused on embedded systems, vehicle control software, and innovation in motorsport. As Chief of Software at TecnoCampus MotorSports, I lead the development and integration of ECU firmware, telemetry, driver display, and sensor networks, ensuring safety and performance on track.</p>
   </section>
 
   <section id="projects" data-aos="fade-up">
