--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
   </nav>
 
   <section id="about" data-aos="fade-up">
-    <h2>✨ About Me</h2>
+    <h2>About Me</h2>
     <p>I'm a passionate software engineer student focused on embedded systems, vehicle control software, and innovation in motorsport. As Chief of Software at TecnoCampus MotorSports, I lead the development and integration of ECU firmware, telemetry, driver display, and sensor networks, ensuring safety and performance on track.</p>
   </section>
 
   <section id="projects" data-aos="fade-up">
-    <h2>🚀 Projects</h2>
+    <h2>Projects</h2>
     <div class="project">
       <h3>Formula Student Car Software Architecture</h3>
       <p>Led the full software architecture for an electric race car: ECU firmware, telemetry systems, safety logic, and CAN communication. Integrated hardware/software and ensured reliable on-track performance.</p>
@@ -138,7 +138,7 @@
   </section>
 
   <section id="experience" data-aos="fade-up">
-    <h2>📊 Experience</h2>
+    <h2>Experience</h2>
     <div class="exp-card">
       <h3>Chief of Software @ TecnoCampus MotorSports</h3>
       <p><em>Nov 2023 – Present</em></p>
@@ -166,13 +166,13 @@
   </section>
 
   <section id="education" data-aos="fade-up">
-    <h2>📚 Education</h2>
+    <h2>Education</h2>
     <p><strong>B.S. in Computer Engineering</strong><br/>Universitat Oberta de Catalunya (2025 – Present)</p>
     <p><strong>Computer Management & Information Systems Engineering</strong><br/>TecnoCampus Mataró (UPF) (2023 – 2025)</p>
   </section>
 
   <section id="skills" data-aos="fade-up">
-    <h2>🔧 Skills</h2>
+    <h2>Skills</h2>
     <ul>
       <li>Embedded Systems & ECU Firmware (C/C++)</li>
       <li>CAN Bus & Real-Time Telemetry</li>
@@ -184,7 +184,7 @@
   </section>
 
   <section id="contact" class="contact" data-aos="fade-up">
-    <h2>💎 Contact</h2>
+    <h2>Contact</h2>
     <p><i class="ph ph-envelope"></i>Email: <a href="mailto:janrubiomontes@gmail.com">janrubiomontes@gmail.com</a></p>
     <p><i class="ph ph-github-logo"></i>GitHub: <a href="https://github.com/jan9122" target="_blank">github.com/jan9122</a></p>
     <p><i class="ph ph-link-simple"></i>Portfolio: <a href="https://jan9122.github.io" target="_blank">jan9122.github.io</a></p>
